--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "swagger-jsdoc": "^4.0.0"
   }
 }
