--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-tools": "^4.0.7",
     "jsonwebtoken": "^8.5.1",
+    "merge-graphql-schemas": "^1.7.6",
     "nodemon": "^2.0.2",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
