--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,12 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
+    "username": "db_user",
+    "password": "password",
     "database": "db_name",
     "host": "127.0.0.1",
     "port": 5432,
     "dialect": "postgres",
+    "operatorsAliases": false,
     "freezeTableName": true
   },
   "test": {
